crates/engine/src/parser/oracle_effect/snapshots/engine__parser__oracle_effect__snapshot_tests__assembly_create_token_put_counter.snap
---
source: crates/engine/src/parser/oracle_effect/mod.rs
expression: def
---
{
  "kind": "Spell",
  "effect": {
    "type": "Token",
    "name": "Soldier",
    "power": {
      "type": "Fixed",
      "value": 1
    },
    "toughness": {
      "type": "Fixed",
      "value": 1
    },
    "types": [
      "Creature",
      "Soldier"
    ],
    "colors": [
      "White"
    ],
    "keywords": [],
    "tapped": false,
    "count": {
      "type": "Fixed",
      "value": 1
    },
    "owner": {
      "type": "Controller"
    },
    "enters_attacking": false,
    "enter_with_counters": [
      [
        "P1P1",
        {
          "type": "Fixed",
          "value": 1
        }
      ]
    ]
  },
  "cost": null,
  "sub_ability": null,
  "duration": null,
  "description": null,
  "target_prompt": null,
  "condition": null,
  "optional_targeting": false,
  "optional": false,
  "forward_result": false
}
