crates/engine/src/parser/oracle_effect/snapshots/engine__parser__oracle_effect__snapshot_tests__assembly_each_opponent_discard.snap
---
source: crates/engine/src/parser/oracle_effect/mod.rs
expression: def
---
{
  "kind": "Spell",
  "effect": {
    "type": "Discard",
    "count": {
      "type": "Fixed",
      "value": 1
    },
    "target": {
      "type": "Controller"
    }
  },
  "cost": null,
  "sub_ability": null,
  "duration": null,
  "description": null,
  "target_prompt": null,
  "condition": null,
  "optional_targeting": false,
  "optional": false,
  "forward_result": false,
  "player_scope": {
    "type": "Opponent"
  }
}
