crates/engine/src/parser/oracle_effect/snapshots/engine__parser__oracle_effect__snapshot_tests__assembly_two_clause_pump_draw.snap
---
source: crates/engine/src/parser/oracle_effect/mod.rs
assertion_line: 31980
expression: def
---
{
  "kind": "Spell",
  "effect": {
    "type": "Pump",
    "power": {
      "type": "Fixed",
      "value": 2
    },
    "toughness": {
      "type": "Fixed",
      "value": 2
    },
    "target": {
      "type": "Typed",
      "type_filters": [
        "Creature"
      ],
      "controller": null,
      "properties": []
    }
  },
  "cost": null,
  "sub_ability": {
    "kind": "Spell",
    "effect": {
      "type": "Draw",
      "count": {
        "type": "Fixed",
        "value": 1
      },
      "target": {
        "type": "Controller"
      }
    },
    "cost": null,
    "sub_ability": null,
    "duration": null,
    "description": null,
    "target_prompt": null,
    "sorcery_speed": false,
    "condition": null,
    "optional_targeting": false,
    "optional": false,
    "forward_result": false,
    "sub_link": "SequentialSibling"
  },
  "duration": "UntilEndOfTurn",
  "description": null,
  "target_prompt": null,
  "sorcery_speed": false,
  "condition": null,
  "optional_targeting": false,
  "optional": false,
  "forward_result": false
}
