crates/engine/src/parser/oracle_effect/snapshots/engine__parser__oracle_effect__snapshot_tests__condition_counter_unless_pays.snap
---
source: crates/engine/src/parser/oracle_effect/mod.rs
assertion_line: 29415
expression: def
---
{
  "kind": "Spell",
  "effect": {
    "type": "Counter",
    "target": {
      "type": "StackSpell"
    }
  },
  "cost": null,
  "sub_ability": null,
  "duration": null,
  "description": null,
  "target_prompt": null,
  "sorcery_speed": false,
  "condition": null,
  "optional_targeting": false,
  "optional": false,
  "unless_pay": {
    "cost": {
      "type": "Mana",
      "cost": {
        "type": "Cost",
        "shards": [],
        "generic": 2
      }
    },
    "payer": {
      "type": "ParentTargetController"
    }
  },
  "forward_result": false
}
