crates/engine/src/parser/oracle_effect/snapshots/engine__parser__oracle_effect__snapshot_tests__condition_you_may_pay_if_do_draw.snap
---
source: crates/engine/src/parser/oracle_effect/mod.rs
assertion_line: 31927
expression: def
---
{
  "kind": "Spell",
  "effect": {
    "type": "PayCost",
    "cost": {
      "type": "Mana",
      "cost": {
        "type": "Cost",
        "shards": [],
        "generic": 2
      }
    },
    "payer": {
      "type": "Controller"
    }
  },
  "cost": null,
  "sub_ability": {
    "kind": "Spell",
    "effect": {
      "type": "Draw",
      "count": {
        "type": "Fixed",
        "value": 1
      },
      "target": {
        "type": "Controller"
      }
    },
    "cost": null,
    "sub_ability": null,
    "duration": null,
    "description": null,
    "target_prompt": null,
    "sorcery_speed": false,
    "condition": {
      "type": "IfYouDo"
    },
    "optional_targeting": false,
    "optional": false,
    "forward_result": false,
    "sub_link": "SequentialSibling"
  },
  "duration": null,
  "description": null,
  "target_prompt": null,
  "sorcery_speed": false,
  "condition": null,
  "optional_targeting": false,
  "optional": true,
  "forward_result": false
}
